--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/thirtymadison/jobs/4319309002'>Job Application for Product Designer at Thirty Madison</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/flowspace/19ee4382-3ff7-4609-ad11-aa96d4067d07'>Flowspace - Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/flowspace/ca4ac08a-a51e-4615-a3e0-09a73c05bac2'>Flowspace - Senior Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ogJC8fwt&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ng59WLwG'>ServiceNow Careers - Principal Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692324312-jr-product-manager-analyst'>Lingoda Jr. Product Manager/Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -144,7 +160,7 @@
 <p><span class="badge badge-light">Sofia City Province, Bulgaria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/F392F9AD03'>Tide Business Banking - Jobs: Product Owner - Tooling - Apply online</a></h5> 
+<h5><a href='https://tide.workable.com/j/F392F9AD03'>Tide Business Banking - Jobs: Product Owner - Tooling - Apply online</a></h5> 
 <p><span class="badge badge-light">Sofia City Province, Bulgaria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -156,7 +172,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -188,7 +204,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/NlhiSQgJ4u/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/NlhiSQgJ4u/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -222,7 +238,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cargo/c59957bf-b904-49b5-95d0-3d89dd86f96b'>Cargo - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/cargo/c59957bf-b904-49b5-95d0-3d89dd86f96b'>Cargo - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -230,7 +246,7 @@
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://rokk3r.workable.com/j/578D65858E'>Rokk3r - Jobs: Software product Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rokk3r.workable.com/j/578D65858E'>Rokk3r - Jobs: Software product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -280,7 +296,7 @@ roadmap that heavily leverages Salesforce.com, customer data, and integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helmitehdas.recruitee.com/o/niini-co-oy-digital-product-manager-helsinki'>
+<h5><a href='https://helmitehdas.recruitee.com/o/niini-co-oy-digital-product-manager-helsinki'>
       NIINI & CO OY ? DIGITAL PRODUCT MANAGER ? HELSINKI - Helmitehdas Oy
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -304,7 +320,7 @@ transactions, mobile user acquisition, social networks, commerce and money.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://atlanticmedia.applytojob.com/apply/uuhM9K9rgG/Associate-Product-Manager'>Associate Product Manager - Atlantic Media - Career Page</a></h5> 
+<h5><a href='http://atlanticmedia.applytojob.com/apply/uuhM9K9rgG/Associate-Product-Manager'>Associate Product Manager - Atlantic Media - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -345,17 +361,17 @@ experience analysis and testing, competitive research and any other relevant?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/trustyou/992279ba-9f94-489c-a8c0-876331a7ee94'>TrustYou - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/trustyou/992279ba-9f94-489c-a8c0-876331a7ee94'>TrustYou - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Our employees are experts in big data, machine learning, natural language 
 processing, and interactive Web applications. Check out our tech stack! Apply for 
 this?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/apttus/job/oyVL9fw7'>Apttus Careers - Senior Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/apttus/job/oyVL9fw7'>Apttus Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://productsup.join.com/jobs/260825-product-manager-m-f-d'>Job @ Productsup (Berlin): Product Manager (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://productsup.join.com/jobs/260825-product-manager-m-f-d'>Job @ Productsup (Berlin): Product Manager (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -363,7 +379,7 @@ this?...</p>
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPnaVfw1&k=Job&j=oa8Z9fwa&__jvst=Referral&__jvsd=sHyaOgwY&__jvsc=Twitter&bid=nyK5UKww'>Serenova Careers - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPnaVfw1&k=Job&j=oa8Z9fwa&__jvst=Referral&__jvsd=sHyaOgwY&__jvsc=Twitter&bid=nyK5UKww'>Serenova Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -407,7 +423,7 @@ this?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/graphisoft/jobs/4367320002'>Job Application for Product Designer Manager at Graphisoft</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/graphisoft/jobs/4367320002'>Job Application for Product Designer Manager at Graphisoft</a></h5> 
 <p><span class="badge badge-light">Budapest, Hungary</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -423,7 +439,7 @@ this?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cruise/jobs/1781489?gh_jid=1781489'>Job Application for Product Manager - Customer Support at Cruise</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cruise/jobs/1781489?gh_jid=1781489'>Job Application for Product Manager - Customer Support at Cruise</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... The Product Manager, Customer Support works with our cross-functional team of 
 designers and engineers, and operations to lead the vision, strategy, and?...</p>
@@ -440,26 +456,10 @@ designers and engineers, and operations to lead the vision, strategy, and?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://winnow.workable.com/jobs/1081457'>Product Owner - Apply online - Winnow - Jobs</a></h5> 
+<h5><a href='https://winnow.workable.com/jobs/1081457'>Product Owner - Apply online - Winnow - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... You will have experience working as a Product Owner for a technology company 
 delivering SaaS solutions, or you might be working in a Business Analyst or?...</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/tradesy/d74145bd-494c-4626-bcea-149963c2dfdc'>Tradesy - Product Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/citybase/jobs/1795350'>Job Application for Product Manager  at CityBase</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/appdirect/jobs/4370393002'>Job Application for Product Manager, Productivity & Domains (BA) at AppDirect</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
 <hr/>
 
 
